# EchoShaper

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  package.json
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
backend/app/: main.py  prompt_builder.py
backend/app/models/: asr_adapter_schemas.py  asr_model_names.py  schemas.py
backend/app/presets/: loader.py  presets.yaml
backend/app/services/: asr_2pass.py  asr_2pass_model.py  asr_hotwords.py  asr_model_base.py  asr_registry.py  llm_client.py
backend/app/utils/: text.py
backend/echoshaper_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/tests/: test_prompt_builder.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  echoShaper.ts  types.ts
scripts/: dev-backend.mjs  dev-frontend.mjs  dev.mjs  install.mjs  start-backend.mjs  start.mjs
